--- a/css/settings.css
+++ b/css/settings.css
@@ -27,6 +27,8 @@ input {
 	overflow: hidden;
 	transition: 0.3s;
 	border-radius: 2px;
+	padding: 1px 5px;
+	outline: none;
 }
 
 input:hover {
@@ -36,13 +38,20 @@ input:hover {
 	border-radius: 5px;
 }
 
+input:focus {
+	background: rgba(0, 0, 0, 0.04);
+	box-shadow: inset 0 -1px 0 rgb(0 0 0 / 50%);
+	background-color: var(--text-box-hover);
+	border-radius: 5px;
+}
+
 button {
-	font-family: Nunito;
 	border-radius: 2px;
 	background-color: var(--text-box-background);
 	border: 1px solid var(--text-box-border);
 	transition: 0.3s;
-	padding: 5px 10px;
+	padding: 2px 10px;
+	outline: none;
 }
 
 button:hover {
